0.5/src/objects/MiniFeed__c.object
<CustomObject>
    <fields>
        <fullName>FeedDate__c</fullName>
        <label>FeedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Mini Feeds</relationshipLabel>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EducationHistory__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmploymentHistory__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UserCompetencies__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamspaceMember__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DiscussionThread__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Announcement__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProjectTask__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlogEntry__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WikiPage__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookmark__c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamNew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamEdit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamDelete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamMemberLeave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamMemberAdd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamMemberJoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamEditRole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TeamEditProfile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminCreateNewType</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminEditType</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminCloneType</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminNewTeamProfile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AdminCloneTeamProfile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleAddNewUser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleEditProfile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeoplePhoto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleEducationChange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleEmploymentChange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PeopleCompetencyChange</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MiniFeed</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mini Feed</label>
    <nameField>
        <label>Mini Feed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mini Feeds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>